Update and rename web.html to index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <body>
     <header>
       <div class="header-cotent">
-        <img src="C:\Users\JOSHWA\Downloads\image.jpeg"/>
+        <img src="image.jpeg"/>
         <p>student</p>
       </div>
     </header>
@@ -126,7 +126,7 @@
       <center>
         <div class="section-content">
           <h2>Resume</h2>
-          <a href="C:\Users\JOSHWA\Downloads\CV resume.pdf"
+          <a href="CV resume.pdf"
 class="download-button">Download CV</a>
         </div>
       </center>
